[package]
name = "front-end"
version = "0.1.0"
authors = ["Thomas Caissie <tomkcey@gmail.com>", "Sebastien DErrico <sebastien@hollox.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
rand = "0.8.4"