[package]
name = "front-end"
version = "0.1.0"
authors = ["Thomas Caissie <tomkcey@gmail.com>", "Sebastien DErrico <sebastien@hollox.net>"]
edition = "2018"

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
]

native = [
    "bevy/bevy_wgpu",
]

web = [
    "bevy_webgl2"
]

[dependencies]
bevy = {version="0.5.0", default-features=false}
rand = "0.8.4"
bevy_webgl2 = {version="0.5.0", optional=true}