[package]
name = "front-end"
version = "0.1.0"
authors = ["Thomas Caissie <tomkcey@gmail.com>", "Sebastien DErrico <sebastien@hollox.net>"]
edition = "2018"

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1

[dependencies]
bevy = "0.5.0"
rand = "0.8.4"
bevy_mod_picking = "0.4"
bevy_egui = "0.7"
